Diep TD Changelog
Date format is YYYY-MM-DD
Updates (usually just commits) are separated by new lines
Sub-topics of major changes are intented



2019-1-13

Added teams to sandbox mode.
    Players can now spawn purple and orange tanks.
Nerfed enemies for "Cross-Teamers" level.

Added new level, "Cross-Teamers"
    Similar to "Out of Time", but has three streams of three different types of tanks.
    The first level to branch off (rather than continue linearly)
Adds two new types of tanks.
    Orange Tanks
        10 damage is subtracted from each bullet that hits an orange tank
    Purple tanks
        Each bullet that hits a purple tank does 10 damage.
    This was suggested by u/Teal_Knight on Reddit.

Added sandbox mode.
    Infinite money.
    You can spawn shapes and enemies.
    Basically do whatever you want.
    This was suggested by u/AC5230 on Reddit.

2019-1-9

Added endless mode.
    Mine as many resources as you want (shapes respawn).
    Enemies will attack endlessly, growing in number exponentially as time goes on. (growth is linear plus exponential)
    
    Currently no way to exit it other than suicide (removing all towers). This may be changed in the future.

2019-1-6

Added button which auto-unlocks all levels (may remove later)
Nerfed level 1 enemy spawnrate again.
    The big bursts of enemies overwhelmed defenses.
Fixed bug with triplet tower, now you can upgrade to it (it also no longer fires red bullets)

Added a new level, "Out of Time"
    This level is similar to Level 1, but enemy spawnrate is determined by both time and shapes mined, rather than only shapes mined.
    The new time element forces players to put a sizeable portion of their resources into miners, but not enough that their defense is compromised

2019-1-5

Added overlord
Added drone limits to drone classes
Did a bunch of code refactoring
    Replaced all instances of "discrimination" functions with Array.prototype.filter()

2019-1-3

Added game speed control system.