@@ -7,10 +7,10 @@
         <canvas width=1920 height=1080 id="canvas2" style="object-fit:contain; width: 100%; height: 100%; position:absolute; top:0px; left:0px; z-index: -1"></canvas>
         <canvas width=1920 height=1080 id="canvas3" style="object-fit:contain; width: 100%; height: 100%; position:absolute; top:0px; left:0px; z-index: 2"></canvas>
         <canvas width=1920 height=1080 id="canvas" style="object-fit:contain; width: 100%; height: 100%; position:absolute; top:0px; left:0px;"></canvas>
-        <script src="http://50.39.110.171:42069/diepbullethell/1.js"></script>
-        <script src="http://50.39.110.171:42069/diepbullethell/2.js"></script>
-        <script src="http://50.39.110.171:42069/diepbullethell/20.js"></script>
-        <script src="http://50.39.110.171:42069/diepbullethell/levels.js"></script>
+        <script src="diepbullethell/1.js"></script>
+        <script src="diepbullethell/2.js"></script>
+        <script src="diepbullethell/20.js"></script>
+        <script src="diepbullethell/levels.js"></script>
         <script>
             console.log(lvls);
             //counters
